<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

    <LinearLayout
            android:gravity="center"
            android:layout_margin="16dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <cool.zzy.sems.application.ui.CircleImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/ic_launcher_round"/>


        <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/author_1"/>

        <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/author_2"/>

        <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/author_3"/>

        <RelativeLayout
                android:layout_marginTop="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/cancel"
                    android:text="@android:string/cancel"
                    android:layout_width="wrap_content"
                    android:textColor="@color/colorPrimary"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_height="wrap_content"/>

            <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/ok"
                    android:layout_alignParentEnd="true"
                    android:textColor="@color/colorPrimary"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:text="@string/ok"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:ignore="RelativeOverlap"/>

        </RelativeLayout>

    </LinearLayout>

</RelativeLayout>