<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp">

            <LinearLayout
                    android:layout_margin="8dp"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                <androidx.appcompat.widget.AppCompatTextView
                        android:text="@string/scan_in_the_outbound"
                        android:textColor="@color/colorPrimary"
                        android:textSize="15sp"
                        android:layout_marginStart="16dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginBottom="4dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:ignore="UselessParent">

                    <androidx.appcompat.widget.AppCompatSpinner
                            android:id="@+id/fragment_logistics_personnel_location_spinner"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>

                    <androidx.appcompat.widget.AppCompatImageView
                            android:id="@+id/fragment_logistics_personnel_scan"
                            android:layout_marginStart="16dp"
                            android:layout_marginEnd="16dp"
                            android:layout_width="31dp"
                            android:layout_height="28dp"
                            android:src="@drawable/qr_code"/>

                </LinearLayout>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp">

            <LinearLayout
                    android:layout_margin="8dp"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                <androidx.appcompat.widget.AppCompatTextView
                        android:text="@string/new_delivery"
                        android:textColor="@color/colorPrimary"
                        android:textSize="15sp"
                        android:layout_marginStart="16dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginBottom="4dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                    <androidx.appcompat.widget.AppCompatSpinner
                            android:id="@+id/fragment_logistics_personnel_admin_all_user_spinner"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>

                    <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center">

                        <androidx.appcompat.widget.AppCompatSpinner
                                android:id="@+id/fragment_logistics_personnel_admin_all_delivery_company_spinner"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"/>

                        <androidx.appcompat.widget.AppCompatImageView
                                android:id="@+id/fragment_logistics_personnel_post_id_scan"
                                android:layout_marginStart="16dp"
                                android:layout_width="31dp"
                                android:layout_height="28dp"
                                android:src="@drawable/qr_code"/>

                    </LinearLayout>

                    <LinearLayout
                            android:gravity="center"
                            android:orientation="horizontal"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content">

                        <androidx.appcompat.widget.AppCompatEditText
                                android:id="@+id/fragment_logistics_personnel_admin_delivery_post_id"
                                android:ems="10"
                                android:focusable="true"
                                android:hint="@string/input_delivery_post_id_hint"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:inputType="number"
                                android:theme="@style/EditTextStyle"
                                android:backgroundTint="@android:color/transparent"
                                android:textCursorDrawable="@drawable/edit_cursor_color"/>

                        <androidx.appcompat.widget.AppCompatButton
                                android:id="@+id/fragment_logistics_personnel_admin_delivery_post_id_random"
                                android:text="@string/random"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"/>

                    </LinearLayout>

                    <androidx.appcompat.widget.AppCompatEditText
                            android:id="@+id/fragment_logistics_personnel_admin_delivery_location"
                            android:ems="10"
                            android:focusable="true"
                            android:hint="@string/input_delivery_location_hint"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:inputType="text"
                            android:theme="@style/EditTextStyle"
                            android:backgroundTint="@android:color/transparent"
                            android:textCursorDrawable="@drawable/edit_cursor_color"/>

                    <androidx.appcompat.widget.AppCompatEditText
                            android:id="@+id/fragment_logistics_personnel_admin_delivery_phone"
                            android:ems="10"
                            android:focusable="true"
                            android:hint="@string/input_phone_hint"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:inputType="number"
                            android:theme="@style/EditTextStyle"
                            android:backgroundTint="@android:color/transparent"
                            android:textCursorDrawable="@drawable/edit_cursor_color"/>

                    <LinearLayout
                            android:gravity="center"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content">

                        <androidx.appcompat.widget.AppCompatEditText
                                android:id="@+id/fragment_logistics_personnel_admin_delivery_name"
                                android:ems="10"
                                android:focusable="true"
                                android:hint="@string/input_delivery_name_hint"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:inputType="text"
                                android:theme="@style/EditTextStyle"
                                android:backgroundTint="@android:color/transparent"
                                android:textCursorDrawable="@drawable/edit_cursor_color"/>

                        <androidx.appcompat.widget.AppCompatButton
                                android:id="@+id/fragment_logistics_personnel_admin_delivery_save"
                                android:text="@string/new_delivery"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"/>

                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
                android:id="@+id/fragment_logistics_personnel_delete_delivery"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp">

            <LinearLayout
                    android:layout_margin="8dp"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                <androidx.appcompat.widget.AppCompatTextView
                        android:text="@string/delete_delivery"
                        android:textColor="@color/colorPrimary"
                        android:textSize="15sp"
                        android:layout_marginStart="16dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginBottom="4dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                <LinearLayout
                        android:gravity="center"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:ignore="UselessParent">

                    <androidx.appcompat.widget.AppCompatSpinner
                            android:id="@+id/fragment_logistics_personnel_delete_delivery_spinner"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>

                    <androidx.appcompat.widget.AppCompatButton
                            android:id="@+id/fragment_logistics_personnel_admin_delivery_delete"
                            android:text="@string/delete_delivery"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>

                </LinearLayout>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>